--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@noble/secp256k1": "^1.6.0",
     "bech32": "^2.0.0",
-    "bitcoinlib": "^1.0.2"
+    "bitcoinlib": "^1.0.2",
+    "ripemd160-js": "^1.2.0"
   }
 }
